# rust-wasi-plugin

./: Cargo.toml  LICENSE  README.md  run.sh
.cargo/: config.toml
crate/macro_plugin/: Cargo.toml
crate/macro_plugin/src/: lib.rs
crate/native/: Cargo.toml
crate/native/src/: main.rs
crate/plugin/: Cargo.toml
crate/plugin/src/: lib.rs
crate/plugin_screen_kit/: Cargo.toml
crate/plugin_screen_kit/src/: lib.rs
crate/plugin_test_kit/: Cargo.toml
crate/plugin_test_kit/src/: lib.rs
