

[workspace]
resolver = "2"
members = [
    "crate/*"
]


[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["1739616529"]

[profile.release]
opt-level = 'z'  # Optimize for size
lto = true
codegen-units = 1


[workspace.dependencies]
macro_plugin                = { path = "crate/macro_plugin" }
plugin                      = { path = "crate/plugin" }
tokio                       = { version = "1", default-features = false }
